# HexVault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.MD
.github/workflows/: ci.yml
benches/: kms_comparison_benchmark.rs  traversal_benchmark.rs
docs/: architecture.md  design-decisions.md  key-rotation.md  when-to-use-hexvault.md
examples/: layered_access_demo.rs  multi_tenant_demo.rs
src/: audit.rs  cell.rs  crypto.rs  edge.rs  error.rs  keys.rs  lib.rs  partition.rs  stack.rs
tests/: audit_sink.rs  edge_traversal.rs  isolation.rs  security_hardening.rs  stack_ordering.rs  threat_model.rs
